TestSuite/Verification/Error/Serial/Data-Management/out/includes/MainAllocationTest.hxx

/*********************************************************************/
/*        This is a generated C++ Header file.                       */
/*        Generated by PatternDSL.                                   */
/*        Contains the function declarations for the source file     */
/*********************************************************************/

#ifndef MainAllocationTest_HXX
#define MainAllocationTest_HXX

uint randomizer(int n = 42) {
    srand(n);
    return rand();
}



#endif